eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-results-list/css/module-results-list.css
/**
 *
 *
 *
 * - THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY -
 * - Generated by Gulp (gulp-sass).
 *
 *
 *
 *
 */


.results-list { margin-bottom: 45px; }

.results-list__disclaimer { border-top: 3px solid #EEF0F2; padding: 20px 0; }

.results-list__bottom { margin-top: 40px; }

@media screen and (min-width: 992px) { .results-list { margin-bottom: 90px; } }

.results-list-submodule { display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 30px; }

.results-list-submodule__image-link { display: block; }

.results-list-submodule__image { border: 1px solid #EEF0F2; background: #F8F8F8; padding: 1rem; }

.results-list-submodule__date { color: #98A4AE; font-style: italic; }

.results-list-submodule__secondary-links { display: -webkit-box; display: -ms-flexbox; display: flex; }

.results-list-submodule__name { margin-bottom: 5px; }

.results-list-submodule__name .icon { margin-left: 10px; }

.results-list-submodule__description, .results-list-submodule__url, .results-list-submodule__link-list { margin-bottom: 12px; }

.results-list-submodule__url { word-wrap: break-word; }

.results-list-submodule__link-item { border-right: 1px solid #CCD2D7; margin-right: 16px; padding-right: 16px; }

.results-list-submodule__link-item:last-child { border-right: 0; margin-right: 0; padding-right: 0; }

@media screen and (max-width: 991px) { .results-list-submodule { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
  .results-list-submodule--type-family, .results-list-submodule--type-sku { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
  .results-list-submodule__image-wrapper { margin-bottom: 20px; }
  .results-list-submodule__image { width: 100%; max-width: 260px; } }

@media screen and (min-width: 992px) { .results-list-submodule { margin-bottom: 40px; }
  .results-list-submodule__image-wrapper { -ms-flex-preferred-size: 140px; flex-basis: 140px; margin-right: 30px; padding-top: 8px; }
  .results-list-submodule__image { max-width: 140px; }
  .results-list-submodule__icon-wrapper { -ms-flex-preferred-size: 48px; flex-basis: 48px; margin-right: 30px; padding-top: 8px; }
  .results-list-submodule__icon-wrapper .icon { color: #005EB8; font-size: 48px; } }

